# cadastre_query_service

./: .env.sample  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
main/: admin.py  models.py  paginators.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  views.py
main/migrations/: 0001_initial.py  0002_alter_query_options_alter_query_number.py  0003_alter_query_number.py
main/tests/: test_tasks.py  test_views.py
